# UFO

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_MJLAB_CHANGES.md  PICO_README.md  README.md  README_zh-CN.md  left_time.py  pyproject.toml  run_mjlab.sh  show_help.py
configs/data/: lafan1_mini3.yaml  mini3_pkl.yaml
configs/robots/: g1_29dof.yaml  mini3.yaml
docs/: MJLAB_SETUP_TRAIN_INFERENCE.md  PICO_MINI3_MUJOCO_TELEOP.md  PICO_TO_BFM_POLICY.md  TRAIN_INFERENCE.md  import_wizard.md  mini3_adaptation.md  mini3_bounded_expert_sampling_design.md  mini3_training_configuration.md  motion_list_lafan.md  robot_config_training.md  ufo_bfm_zero_consistency_audit.md
humanoidverse/: distributed.py  eval_goal_joint_mae.py  export_backward_encoder.py  goal_inference.py  goal_inference_mjlab.py  mjlab_inference_utils.py  mjlab_reward_wrapper.py  mujoco_pico_teleop.py  mujoco_tracking_inference.py  reward_inference.py  reward_inference_mjlab.py  tracking_inference.py  tracking_inference_mjlab.py  train.py  train_mjlab.py
humanoidverse/agents/: base.py  nn_filter_models.py
humanoidverse/agents/envs/: expert_motion_loader.py  humanoidverse_isaac.py  humanoidverse_mjlab.py  mini3_real_motor_actuator.py
humanoidverse/agents/evaluations/: humanoidverse_mjlab.py
humanoidverse/agents/fb/: agent.py
humanoidverse/agents/fb_cpr/: agent.py
humanoidverse/agents/fb_cpr_aux/: agent.py
humanoidverse/agents/presets/: __init__.py  fb.py
humanoidverse/config/: base.yaml
humanoidverse/config/domain_rand/: domain_rand.yaml
humanoidverse/config/env/: base_task.yaml  legged_base.yaml  legged_motions.yaml
humanoidverse/config/robot/: robot_base.yaml
humanoidverse/config/simulator/: mujoco.yaml
humanoidverse/data/: lafan_29dof_10s-clipped.pkl
humanoidverse/data/examples/: g1_robot_state_sample.csv
humanoidverse/data/lafan1_mini3/: aiming1_subject1.pkl  aiming1_subject4.pkl  aiming2_subject2.pkl  aiming2_subject3.pkl  aiming2_subject5.pkl  dance1_subject1.pkl  dance1_subject2.pkl  dance1_subject3.pkl  dance2_subject1.pkl  dance2_subject2.pkl  dance2_subject3.pkl  dance2_subject4.pkl  dance2_subject5.pkl  fallAndGetUp1_subject1.pkl  fallAndGetUp1_subject4.pkl  fallAndGetUp1_subject5.pkl  fallAndGetUp2_subject2.pkl  fallAndGetUp2_subject3.pkl  fallAndGetUp3_subject1.pkl  fight1_subject2.pkl  fight1_subject3.pkl  fight1_subject5.pkl  fightAndSports1_subject1.pkl  fightAndSports1_subject4.pkl  ground1_subject1.pkl  ground1_subject4.pkl  ground1_subject5.pkl  ground2_subject2.pkl  ground2_subject3.pkl  jumps1_subject1.pkl  jumps1_subject2.pkl  jumps1_subject5.pkl  multipleActions1_subject1.pkl  multipleActions1_subject2.pkl  multipleActions1_subject3.pkl  multipleActions1_subject4.pkl  obstacles1_subject1.pkl  obstacles1_subject2.pkl  obstacles1_subject5.pkl  obstacles2_subject1.pkl  (+37 more)
humanoidverse/data/lafan1_mini3_ufo/: _ufo_per_motion_index.json  aiming1_subject1__clip000.pkl  aiming1_subject1__clip001.pkl  aiming1_subject1__clip002.pkl  aiming1_subject1__clip003.pkl  aiming1_subject1__clip004.pkl  aiming1_subject1__clip005.pkl  aiming1_subject1__clip006.pkl  aiming1_subject1__clip007.pkl  aiming1_subject1__clip008.pkl  aiming1_subject1__clip009.pkl  aiming1_subject1__clip010.pkl  aiming1_subject1__clip011.pkl  aiming1_subject1__clip012.pkl  aiming1_subject1__clip013.pkl  aiming1_subject1__clip014.pkl  aiming1_subject1__clip015.pkl  aiming1_subject1__clip016.pkl  (+1675 more)
humanoidverse/envs/: motion_observations.py
humanoidverse/tools/: __init__.py  convert_mini3_csv.py  convert_mini3_pkl.py  convert_pico_motion_clip.py  data_build.py  data_inspect.py  play_mini3_csv.py  play_mini3_pkl.py  play_robot_state_npz.py  resample_ufo_motion.py  robot_inspect.py
humanoidverse/training/: workspace.py
humanoidverse/utils/: helpers.py  mini3_real_motor.py  reference_observations.py  torch_utils.py
motivo_isaac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pico_data/: pico_v2_mini3.pkl
pico_sim2sim/: .gitignore  README.md  __init__.py  doctor.py  install.sh  smplx_model.py  sonic_protocol.py  sonic_server.py  xrobotoolkit.py
pico_sim2sim/joyin/: __init__.py  mini3_ik.xml  retarget.py  smplx_to_mini3.json
pico_sim2sim/smplx/: README.md
pico_sim2sim/xrobotoolkit_binding/: CMakeLists.txt
pico_sim2sim/xrobotoolkit_binding/bindings/: py_bindings.cpp
scripts/: download_data.sh  smoke_release.sh
tests/: test_agent_aliases.py  test_checkpoint_initialization.py  test_convert_mini3_csv.py  test_convert_mini3_pkl.py  test_convert_pico_motion_clip.py  test_import_tools.py  test_mini3_real_motor.py  test_mini3_robot_config.py  test_motion_data_adapter.py  test_mujoco_pico_teleop.py  test_mujoco_tracking_inference.py  test_play_mini3_csv.py  test_play_mini3_pkl.py  test_play_robot_state_npz.py  test_reference_observations.py  test_resample_ufo_motion.py  test_robot_config_goal_reward_inference.py  test_robot_config_onnx_export.py  test_robot_config_training.py  test_robot_xml_hydra_generation.py  test_update_z_cli.py  test_urdf_assisted_robot_inspect.py
tools/: export_backward_encoder_onnx.py  make_lafan_near10s.py  make_motion_list_md.py  validate_mjlab_bfmzero.py
(+52 files in other folders)
